Update npm dependencies

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -36,7 +36,7 @@ html(lang='en')
           li: a(href='/about') About me
     block content
     footer
-      p My name is Thomas
+      p I still use #[a(href="/rss") RSS]
     script.
       window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
       ga('create','UA-XXXXX-Y','auto');ga('send','pageview')
